Fixed wonky css reset which was causing scrollbars

--- a/style.css
+++ b/style.css
@@ -1,84 +1,55 @@
-
 /* Box sizing rules */
 *,
 *::before,
 *::after {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-/* Prevent font size inflation */
-html {
-	-moz-text-size-adjust: none;
-	-webkit-text-size-adjust: none;
-	text-size-adjust: none;
-}
-
-/* Remove default margin in favour of better control in authored CSS */
-body, h1, h2, h3, h4, p,
-figure, blockquote, dl, dd {
-	margin-block-end: 0;
-}
-
-/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-ul[role='list'],
-ol[role='list'] {
-	list-style: none;
+/* Remove default margin and padding */
+body,
+h1, h2, h3, h4, h5, h6,
+p, figure, blockquote, dl, dd {
+  margin: 0;
+  padding: 0;
 }
 
 /* Set core body defaults */
 body {
-	min-height: 100vh;
-	line-height: 1.5;
+  min-height: 100vh;
+  scroll-behavior: smooth;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
 }
 
-/* Set shorter line heights on headings and interactive elements */
-h1, h2, h3, h4,
-button, input, label {
-	line-height: 1.1;
-}
-
-/* Balance text wrapping on headings */
-h1, h2,
-h3, h4 {
-	text-wrap: balance;
-}
-
-/* A elements that don't have a class get default styles */
-a:not([class]) {
-	text-decoration-skip-ink: auto;
-	color: currentColor;
+/* Remove list styles on ul, ol elements */
+ul, ol {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 /* Make images easier to work with */
-img,
-picture {
-	max-width: 100%;
-	display: block;
+img {
+  max-width: 100%;
+  display: block;
 }
 
 /* Inherit fonts for inputs and buttons */
-input, button,
-textarea, select {
-	font-family: inherit;
-	font-size: inherit;
+input,
+button,
+textarea,
+select {
+  font: inherit;
 }
 
-/* Make sure textareas without a rows attribute are not tiny */
-textarea:not([rows]) {
-	min-height: 10em;
-}
-
-/* Anything that has been anchored to should have extra scroll margin */
-:target {
-	scroll-margin-block: 5ex;
-}
-
-
-.teko-bold {
-	font-family: "Special Gothic Condensed One", sans-serif;
-	font-optical-sizing: auto;
-	font-weight: 700;
-	font-style: normal;
+/* Remove all animations and transitions for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  * {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
 }
 
 @font-face {
@@ -90,6 +61,7 @@ textarea:not([rows]) {
 
 #numCont {
 	display: flex;
+	flex-basis: content;
 	flex-direction: row;
 }
 
